use kakao map api

--- a/apiapp/templates/show.html
+++ b/apiapp/templates/show.html
@@ -19,5 +19,17 @@
             <small class='text-muted'>{{board.pub_date}} </small>
         </div>
     {% endfor %}
+
+    	<div id="map" style="width:500px;height:400px;"></div>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0b251c77a3d989e136e64cc26a3ddb05"></script>
+	<script>
+		var container = document.getElementById('map');
+		var options = {
+			center: new kakao.maps.LatLng(33.450701, 126.570667),
+			level: 3
+		};
+
+		var map = new kakao.maps.Map(container, options);
+	</script>
 </body>
 </html>
