--- a/apiapp/templates/show.html
+++ b/apiapp/templates/show.html
@@ -19,9 +19,9 @@
             <small class='text-muted'>{{board.pub_date}} </small>
         </div>
     {% endfor %}
-
+<!-- 지도 띄우기 -->
     	<div id="map" style="width:500px;height:400px;"></div>
-	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0b251c77a3d989e136e64cc26a3ddb05"></script>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=48871d5242b8f34db54adb700974b024"></script>
 	<script>
 		var container = document.getElementById('map');
 		var options = {
@@ -30,6 +30,18 @@
 		};
 
 		var map = new kakao.maps.Map(container, options);
-	</script>
+
+// 일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
+var mapTypeControl = new kakao.maps.MapTypeControl();
+
+// 지도에 컨트롤을 추가해야 지도위에 표시됩니다
+// kakao.maps.ControlPosition은 컨트롤이 표시될 위치를 정의하는데 TOPRIGHT는 오른쪽 위를 의미합니다
+map.addControl(mapTypeControl, kakao.maps.ControlPosition.TOPRIGHT);
+
+// 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
+var zoomControl = new kakao.maps.ZoomControl();
+map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+
+    </script>
 </body>
 </html>
